--- a/suport.html
+++ b/suport.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+
+<div class="alert">
+    <p class="alert-text">Alert text</p>
+    <svg class="alert-icon">100</svg>
+</div>
     
 </body>
 </html>
