--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,41 @@
             <li><a href="">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <main>
+        <section>
+            <ul>
+                <li><button type="button" >Все</button></li>
+                <li><button type="button" >Веб-сайты</button></li>
+                <li><button type="button" >Приложения</button></li>
+                <li><button type="button" >Дизайн</button></li>
+                <li><button type="button" >Маркетинг</button></li>
+            </ul>
+        </section> 
+        
+        <section>
+            <ul>
+               <li><img src="./images/img(9)(9).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(1)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(2)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(3)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(4)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(5)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(6)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(7)(1).jpg" alt="">
+            <p></p></li>
+               <li><img src="./images/img(8)(1).jpg" alt="">
+            <p></p></li>
+            </ul>
+        </section>
+
+    </main>
     <footer>
         <a href="./index.html"> WebStudio
         </a>
