--- a/portfolio.html
+++ b/portfolio.html
@@ -36,24 +36,33 @@
         
         <section>
             <ul>
-               <li><img src="./images/img(9)(9).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(1)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(2)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(3)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(4)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(5)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(6)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(7)(1).jpg" alt="">
-            <p></p></li>
-               <li><img src="./images/img(8)(1).jpg" alt="">
-            <p></p></li>
+               <li><img src="./images/img(9)(9).jpg" alt="ноутбук" width="370">
+                <h4>Технокряк</h4>
+            <p>Веб-сайт</p></li>
+               <li><img src="./images/img(1)(1).jpg" alt="игра вбаскетбол" width="370">
+                <h4>Постер New Orlean vs Golden Star</h4>
+         <p>Дизайн</p></li>
+               <li><img src="./images/img(2)(1).jpg" alt=" логотип ресторана" width="370">
+                <h4>Ресторан Seafood</h4>
+            <p>Приложение</p></li>
+               <li><img src="./images/img(3)(1).jpg" alt="наушники" width="370">
+                <h4>Проект Prime</h4>
+            <p>Маркетинг</p></li>
+               <li><img src="./images/img(4)(1).jpg" alt="коробки" width="370">
+                <h4>Проект Boxes</h4>
+            <p>Приложение</p></li>
+               <li><img src="./images/img(5)(1).jpg" alt="монитор" width="370">
+                <h4>Inspiration has no Borders</h4>
+            <p>Веб-сайт</p></li>
+               <li><img src="./images/img(6)(1).jpg" alt="книга" width="370">
+                <h4>Издание Limited Edition</h4>
+            <p>Дизайн</p></li>
+               <li><img src="./images/img(7)(1).jpg" alt="бирка" width="370">
+                <h4>Проект LAB</h4>
+            <p>Маркетинг</p></li>
+               <li><img src="./images/img(8)(1).jpg" alt="работа на клавиатуре" width="370">
+                <h4>Growing Business</h4>
+            <p>Приложение</p></li>
             </ul>
         </section>
 
