--- a/index.html
+++ b/index.html
@@ -9,57 +9,58 @@
     
 </head>
 <body>
-    <header>
+<!--Шапка сайта-->
+        <header >
         <nav>
-            <a href="./index.html">WebStudio
+            <a href="./index.html" class="logo-head">Web<span class=" " >Studio</span>
             </a>
 
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href=""class="icon-stud">Студия</a></li>
+                <li><a href="./portfolio.html" class="icon-portfolio" >Портфолио</a></li>
+                <li><a href="" class="icon-contakts" >Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="" class="active-gmail" >info@devstudio.com</a></li>
+            <li><a href="" class="active-mobail" >+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
-        <section>
-            <h1>Эффективные решения <br> для вашего бизнеса
+        <section class="background">
+            <h1 class="title">Эффективные решения <br> для вашего бизнеса
             </h1>
-            <button type="button">Заказать услугу</button>
+            <button type="button" class="btn">Заказать услугу</button>
         </section>
 
 
-        <section>
+        <section class="section-slogan">
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало
+                    <h3 class="subtitle-one" >Внимание к деталям</h3>
+                    <p class="slogan-one">Идейные соображения, а также начало
                         повседневной работы по формированию позиции.
                     </p>
                 </li>
 
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и
+                    <h3 class="subtitle-two" >Пунктуальность</h3>
+                    <p class="slogan-two" >Задача организации, в особенности же рамки и
                         место обучения кадров влечет за собой.
                     </p>
                 </li>
 
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом
+                    <h3 class="subtitle-three" >Планирование</h3>
+                    <p class="slogan-three" >Равным образом консультация с широким активом
                         в значительной степени обуславливает.
                     </p>
                 </li>
 
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что
+                    <h3 class="subtitle-four" >Современные технологии</h3>
+                    <p class="slogan-four" >Значимость этих проблем настолько очевидна, что
                         реализация плановых заданий.
                     </p>
 
@@ -68,32 +69,32 @@
         </section>
 
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="title-classes">Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.jpg" alt="набор программы на клавиатуре" width="370"></li>
-                <li><img src="./images/img.jpg" alt="тест мобтльного приложения на ноутбуке" width="370"></li>
-                <li><img src="./images/box3.jpg" alt="работа с планшетом" width="370"></li>
+                <li><img src="./images/box1.jpg" alt="набор программы на клавиатуре" width="370" class="pic-a"></li>
+                <li><img src="./images/img.jpg" alt="тест мобтльного приложения на ноутбуке" width="370" class="pic-b"></li>
+                <li><img src="./images/box3.jpg" alt="работа с планшетом" width="370" class="pic-c"></li>
             </ul>
         </section>
 
 
 
-        <section>
-            <h2>Наша команда</h2>
+        <section class="section-comand">
+            <h2 class="title-comand" >Наша команда</h2>
             <ul>
-                <li><img src="./images/img1.jpg" alt="фото игоря демьяненко" width="270">
+                <li><img src="./images/img1.jpg" alt="фото игоря демьяненко" width="270" class="img-igor">
                     <p>Игорь Демьяненко</p>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="./images/img2.jpg" alt="фото ольга репина" width="270">
+                <li><img src="./images/img2.jpg" alt="фото ольга репина" width="270" class="img-olga">
                     <p>Ольга Репина</p>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="./images/img3.jpg" alt="фото николай тарасов" width="270">
+                <li><img src="./images/img3.jpg" alt="фото николай тарасов" width="270" class="img-nik">
                     <p>Николай Тарасов</p>
                     <p>Marketing</p>
                 </li>
-                <li><img src="./images/img4.jpg" alt="фото михаил ермаков" width="270">
+                <li><img src="./images/img4.jpg" alt="фото михаил ермаков" width="270" class="img-miha">
                     <p>Михаил Ермаков</p>
                     <p>UI Designer</p>
                 </li>
@@ -101,19 +102,18 @@
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html"> WebStudio
-        </a>
+    <footer class="footer">
+        <a href="./index.html" class="logo-footer"> Web<span>Studio</span> </a>
         <address>
             <ul>
                 <li>
-                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <p class="icon-adres">г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
 
-                <li><a href="">info@example.com</a>
+                <li><a href="" class="icon-gmail">info@example.com</a>
                 </li>
 
-                <li><a href="">+38 099 111 11 11</a>
+                <li><a href="" class="icon-mob">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
