--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--Шапка сайта-->
-        <header >
+        <header>
         <nav>
             <a href="./index.html" class="logo-head">Web<span class=" " >Studio</span>
             </a>
@@ -83,20 +83,20 @@
             <h2 class="title-comand" >Наша команда</h2>
             <ul>
                 <li><img src="./images/img1.jpg" alt="фото игоря демьяненко" width="270" class="img-igor">
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <p class="title-img-igor">Игорь Демьяненко</p>
+                    <p class="subtitle-img-igor">Product Designer</p>
                 </li>
                 <li><img src="./images/img2.jpg" alt="фото ольга репина" width="270" class="img-olga">
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <p class="title-img-olga">Ольга Репина</p>
+                    <p class="subtitle-img-olga">Frontend Developer</p>
                 </li>
                 <li><img src="./images/img3.jpg" alt="фото николай тарасов" width="270" class="img-nik">
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <p class="title-img-nik">Николай Тарасов</p>
+                    <p class="subtitle-img-nik">Marketing</p>
                 </li>
                 <li><img src="./images/img4.jpg" alt="фото михаил ермаков" width="270" class="img-miha">
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <p class="title-img-miha">Михаил Ермаков</p>
+                    <p class="subtitle-img-miha">UI Designer</p>
                 </li>
             </ul>
         </section>
