--- a/index.html
+++ b/index.html
@@ -1,119 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
-<body>
-<!--Шапка сайта-->
-        <header>
+
+<body class="page">
+    <!-- шапка документа -->
+    <header class="head">
         <nav>
-            <a href="./index.html" class="logo-head">Web<span class=" " >Studio</span>
+            <a href="./index.html" class="logo"> <span class="logo-color">Web</span>Studio
             </a>
 
-            <ul>
-                <li><a href=""class="icon-stud">Студия</a></li>
-                <li><a href="./portfolio.html" class="icon-portfolio" >Портфолио</a></li>
-                <li><a href="" class="icon-contakts" >Контакты</a></li>
+            <ul class="site-nav">
+                <li class="nav-studio"><a href="./index.html" class="link current">Студия</a></li>
+                <li class="nav-portfolio"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li class="nav-contakt"><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="" class="active-gmail" >info@devstudio.com</a></li>
-            <li><a href="" class="active-mobail" >+38 096 111 11 11</a></li>
+            <li class="link-gmail"><a href="">info@devstudio.com</a></li>
+            <li class="link-phone"><a href="">+38 096 111 11 11</a></li>
         </ul>
     </header>
-
+    <!-- Основной контент -->
     <main>
-        <section class="background">
-            <h1 class="title">Эффективные решения <br> для вашего бизнеса
+        <!-- Герой -->
+        <section class="section-hero">
+            <h1>Эффективные решения <br> для вашего бизнеса
             </h1>
-            <button type="button" class="btn">Заказать услугу</button>
+            <button type="button">Заказать услугу</button>
         </section>
 
-
+        <!-- Достоинства -->
         <section class="section-slogan">
             <ul>
-                <li>
-                    <h3 class="subtitle-one" >Внимание к деталям</h3>
-                    <p class="slogan-one">Идейные соображения, а также начало
+                <li class="slogan-one">
+                    <h3 class="section-title">Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало
                         повседневной работы по формированию позиции.
                     </p>
                 </li>
 
-                <li>
-                    <h3 class="subtitle-two" >Пунктуальность</h3>
-                    <p class="slogan-two" >Задача организации, в особенности же рамки и
+                <li class="slogan-two">
+                    <h3 class="section-title">Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и
                         место обучения кадров влечет за собой.
                     </p>
                 </li>
 
-                <li>
-                    <h3 class="subtitle-three" >Планирование</h3>
-                    <p class="slogan-three" >Равным образом консультация с широким активом
+                <li class="slogan-three">
+                    <h3 class="section-title">Планирование</h3>
+                    <p>Равным образом консультация с широким активом
                         в значительной степени обуславливает.
                     </p>
                 </li>
 
-                <li>
-                    <h3 class="subtitle-four" >Современные технологии</h3>
-                    <p class="slogan-four" >Значимость этих проблем настолько очевидна, что
+                <li class="slogan-four">
+                    <h3 class="section-title">Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что
                         реализация плановых заданий.
                     </p>
 
                 </li>
             </ul>
         </section>
-
-        <section>
-            <h2 class="title-classes">Чем мы занимаемся</h2>
+        <!-- Чем мы занимаемся -->
+        <section class="skils">
+            <h2 class="skils-title">Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.jpg" alt="набор программы на клавиатуре" width="370" class="pic-a"></li>
-                <li><img src="./images/img.jpg" alt="тест мобтльного приложения на ноутбуке" width="370" class="pic-b"></li>
-                <li><img src="./images/box3.jpg" alt="работа с планшетом" width="370" class="pic-c"></li>
+                <li><img class="img-box1" src="./images/box1.jpg" alt="набор программы на клавиатуре" width="370"></li>
+                <li><img class="img-img" src="./images/img.jpg" alt="тест мобтльного приложения на ноутбуке"
+                        width="370"></li>
+                <li><img class="img-box3" src="./images/box3.jpg" alt="работа с планшетом" width="370"></li>
             </ul>
         </section>
 
-
-
+        <!-- Наша команда -->
         <section class="section-comand">
-            <h2 class="title-comand" >Наша команда</h2>
+            <h2 class="comand-title">Наша команда</h2>
             <ul>
-                <li><img src="./images/img1.jpg" alt="фото игоря демьяненко" width="270" class="img-igor">
-                    <p class="title-img-igor">Игорь Демьяненко</p>
-                    <p class="subtitle-img-igor">Product Designer</p>
+                <li class="img-igor"><img src="./images/img1.jpg" alt="фото игоря демьяненко" width="270">
+                    <h3 class="img-title">Игорь Демьяненко</h3>
+                    <p class="img-subtitle">Product Designer</p>
                 </li>
-                <li><img src="./images/img2.jpg" alt="фото ольга репина" width="270" class="img-olga">
-                    <p class="title-img-olga">Ольга Репина</p>
-                    <p class="subtitle-img-olga">Frontend Developer</p>
+                <li class="img-olga"><img src="./images/img2.jpg" alt="фото ольга репина" width="270">
+                    <h3 class="img-title">Ольга Репина</h3>
+                    <p class="img-subtitle">Frontend Developer</p>
                 </li>
-                <li><img src="./images/img3.jpg" alt="фото николай тарасов" width="270" class="img-nik">
-                    <p class="title-img-nik">Николай Тарасов</p>
-                    <p class="subtitle-img-nik">Marketing</p>
+                <li class="img-nik"><img src="./images/img3.jpg" alt="фото николай тарасов" width="270">
+                    <h3 class="img-title">Николай Тарасов</h3>
+                    <p class="img-subtitle">Marketing</p>
                 </li>
-                <li><img src="./images/img4.jpg" alt="фото михаил ермаков" width="270" class="img-miha">
-                    <p class="title-img-miha">Михаил Ермаков</p>
-                    <p class="subtitle-img-miha">UI Designer</p>
+                <li class="img-mik"><img src="./images/img4.jpg" alt="фото михаил ермаков" width="270">
+                    <h3 class="img-title">Михаил Ермаков</h3>
+                    <p class="img-subtitle">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
+    <!-- Футер -->
     <footer class="footer">
-        <a href="./index.html" class="logo-footer"> Web<span>Studio</span> </a>
+        <a href="./index.html" class="logo"> <span class="logo-color">Web</span>Studio
+        </a>
+
         <address>
             <ul>
                 <li>
-                    <p class="icon-adres">г. Киев, пр-т Леси Украинки, 26</p>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
 
-                <li><a href="" class="icon-gmail">info@example.com</a>
+                <li class="footer-gmail"><a href="">info@example.com</a>
                 </li>
 
-                <li><a href="" class="icon-mob">+38 099 111 11 11</a>
+                <li class="footer-phone"><a href="">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
@@ -122,4 +132,5 @@
 
 
 </body>
+
 </html>
