упаковка див (партфолио)

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,11 @@
     </header>
 
     <main class="main">
-        <!-- Фильтры -->
-        <section>
-            <div class="container">
+
+       <div class="container">
+
+            <!-- Фильтры -->
+            <section class="section-button">
                 <ul>
                     <li class="btn-all"><button type="button" class="btn-portfolio">Все</button></li>
                     <li class="btn-web"><button type="button" class="btn-portfolio">Веб-сайты</button></li>
@@ -45,11 +47,10 @@
                     <li class="btn-diz"><button type="button" class="btn-portfolio">Дизайн</button></li>
                     <li class="btn-mrct"><button type="button" class="btn-portfolio">Маркетинг</button></li>
                 </ul>
-            </div>
-        </section>
-        <!-- Пример работ -->
-        <section class="section-portfolio">
-            <div class="container">
+            </section>
+            
+            <!-- Пример работ -->
+            <section class="section-portfolio">
                 <ul>
                     <li class="pic-tehno"><img src="./images/img(9)(9).jpg" alt="ноутбук" width="370">
                         <h4 class="pic-title">Технокряк</h4>
@@ -88,10 +89,11 @@
                         <p class="pic-subtitle">Приложение</p>
                     </li>
                 </ul>
-            </div>
-        </section>
-
-    </main>
+            </section>
+            
+            </main>
+       </div>
+       <!-- Подвал -->
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo"> <span class="logo-color">Web</span>Studio
