--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
     <!-- шапка документа -->
     <header class="head">
         <div class="container">
-            <nav>
+            <nav class="head-nav">
                 <a href="./index.html" class="logo"> <span class="logo-color">Web</span>Studio
                 </a>
-            
+    
                 <ul class="site-nav">
-                    <li class="nav-studio"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="nav-portfolio"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="nav-studio"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="nav-portfolio"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="nav-contakt"><a href="" class="link">Контакты</a></li>
                 </ul>
+                <ul class="auth-nav">
+                    <li class="link-gmail"><a href="">info@devstudio.com</a></li>
+                    <li class="link-phone"><a href="">+38 096 111 11 11</a></li>
             </nav>
-            <ul>
-                <li class="link-gmail"><a href="">info@devstudio.com</a></li>
-                <li class="link-phone"><a href="">+38 096 111 11 11</a></li>
-            </ul>
         </div>
     </header>
     <!-- Основной контент -->
@@ -126,7 +125,7 @@
         <a href="./index.html" class="logo"> <span class="logo-color">Web</span>Studio
         </a>
         <address>
-            <ul>
+            <ul class="address-menu">
                 <li>
                     <p>г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
