--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <!-- Герой -->
         <section class="section-hero">
-               <div class="container">
+               <div class="container">  svg
                     <h1>Эффективные решения <br> для вашего бизнеса
                     </h1>
                     <button class="hero-button" type="button">Заказать услугу</button>
